fix black text on mobile, redirect to wrong page

--- a/styles/about.css
+++ b/styles/about.css
@@ -76,6 +76,7 @@ nav {
 
 h2 {
   padding-bottom: 1.2rem;
+  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
   text-align: center;
   text-decoration: underline
     color-mix(in srgb, var(--clr-primary) 70%, var(--clr-secondary)) 2px;
@@ -87,12 +88,12 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
 }
 
 section p {
   max-width: 1000px;
   font-size: clamp(1rem, 1vw + 0.5rem, 1.15rem);
+  color: color-mix(in srgb, var(--clr-primary) 80%, var(--clr-secondary));
 }
 
 #about {
