--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,7 @@ main {
 }
 
 h1 {
+  color: var(--clr-primary);
   text-align: center;
   line-height: 1;
   font-size: var(--fs-title);
